# AdvVadvGanRoBERTa

./: pyproject.toml
conf/: experiment_config_hausa.yaml  experiment_config_hausa_few_shot.yaml  experiment_config_yoruba.yaml  experiment_config_yoruba_few_shot.yaml
dataloaders/: hausa_newsclass_topic.py  yoruba_newsclass_topic.py
models/: discriminator.py  generator.py
models/adversarial_gan_models/: adversarial_gan_bert.py  adversarial_gan_xlm_roberta.py
models/backbones/: adversarial_bert.py  adversarial_xlm_roberta.py
scripts/: train_hausa_newsclass.py  train_hausa_newsclass_few_shot.py  train_yoruba_newsclass.py  train_yoruba_newsclass_few_shot.py
